aligned headers to left again, and prefixed the urls to fix linkin error

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -190,5 +190,5 @@ blockquote {
 footer {
     font-family: 'Carme', sans-serif;
     letter-spacing: 2px;
-    text-align: center;
+    text-align: left;
 }
